--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           fetch('//api.giphy.com/v1/gifs/random?tag=beer&rating=g&api_key=4Z7XmRZCziCDF0q6rLwAKO7BjgGuF74u').then(function(response) {
             return response.json();
           }).then(function(my_result) {
-            $('#_giphy_tv').html('<img src="'+my_result.data.embed_url+'">');
+            $('#_giphy_tv').html('<img src="'+my_result.data.images.origial.url+'">');
           });
         });
       </script>
